# esp_drone_flight_controller

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  idf_component.yml  main.cpp  uros_layer.cpp  uros_layer.hpp
main/.ccls-cache/@@home@ds3a@dev@esp_drone_flight_controller@main/: @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@unistd.h.blob  @usr@include@x86_64-linux-gnu@bits@confname.h.blob  @usr@include@x86_64-linux-gnu@bits@environments.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_core.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_posix.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@posix_opt.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@time64.h.blob  @usr@include@x86_64-linux-gnu@bits@timesize.h.blob  @usr@include@x86_64-linux-gnu@bits@types.h.blob  (+16 more)
main/attitude_determination/: attitude_determination.cpp  attitude_determination.hpp
main/drone_hardware_layer/: drone_hardware_layer.cpp  drone_hardware_layer.hpp  mpu6050_abs.cpp  mpu6050_abs.hpp  tfmini_lidar.cpp  tfmini_lidar.hpp
main/include/: accel_lowpassFilter.h  attitude_determination.hpp  gyro_highpassFilter.h  mpu6050_abs.hpp  mpu6050_registers.hpp
(+11 files in other folders)
